RESOLVED FIXED275345
[WebGPU] Some CVPixelBuffer formats are incorrectly mapped with CVMetalTextureCache
https://bugs.webkit.org/show_bug.cgi?id=275345
Summary [WebGPU] Some CVPixelBuffer formats are incorrectly mapped with CVMetalTextur...
Mike Wyrzykowski
Reported 2024-06-10 21:10:10 PDT
[WebGPU] Some CVPixelBuffer formats are incorrectly mapped with CVMetalTextureCache
Attachments
Mike Wyrzykowski
Comment 1 2024-06-10 21:10:21 PDT
Mike Wyrzykowski
Comment 2 2024-06-10 21:24:59 PDT
EWS
Comment 3 2024-06-11 17:31:17 PDT
Committed 279934@main (80839e1c8493): <https://commits.webkit.org/279934@main> Reviewed commits have been landed. Closing PR #29700 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.