[WebGPU] Some CVPixelBuffer formats are incorrectly mapped with CVMetalTextureCache https://bugs.webkit.org/show_bug.cgi?id=275345 <radar://129219004>

Reviewed by Tadeu Zagallo.

AVAsset chooses Apple Silicon specific formats for some base64 encoded videos,
add support for these so they are displayed correctly.

AVAsset uses different formats, e.g., 'x422', on Intel macs, so expect pixel differences
on those devices.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/regression/repro_275345-expected.png: Added.
* LayoutTests/fast/webgpu/regression/repro_275345-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_275345.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::metalPixelFormat):
(WebGPU::Device::createExternalTextureFromPixelBuffer const):
* Source/WebGPU/WebGPU/MetalSPI.h:

Canonical link: https://commits.webkit.org/279934@main